--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,20 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Node / Next.js
+node_modules/
+.next/
+out/
+dist/
+coverage/
 npm-debug.log*
-yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+.pnpm-store/
 
-# env files (can opt-in for committing if needed)
-.env*
+# Env
+.env
+.env.*
+!.env.example
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# OS / editor
+.DS_Store
+.idea/
+.vscode/
+*.swp
